infra/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    #- name: https
    #protocol: HTTPS
    #port: 443
    #tls:
    #  mode: Terminate
    #  certificateRefs:
    #    - name: "exampe"
